@@ -11,6 +11,11 @@ which worries me and has resulted in a number of bugs.
 
 markup_attr_map can be optimized since it's always a map now.
 
+Upon encountering UTF-16LE data or some other uncommon serialization
+of Unicode, UnicodeDammit will convert the data to Unicode, then
+encode it at UTF-8. This is wasteful because it will just get decoded
+back to Unicode.
+
 CDATA
 -----
 
