@@ -3,6 +3,9 @@
 * Made encoding substitution in <meta> tags completely transparent (no
   more %SOUP-ENCODING%).
 
+* Fixed a bug in decoding data that contained a byte-order mark, such
+  as data encoded in UTF-16LE. [bug=988980]
+
 * Fixed a bug that made the HTMLParser treebuilder generate XML
   definitions ending with two question marks instead of
   one. [bug=984258]
